plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ayushsrawat'
version = '0.0.1-SNAPSHOT'
description = 'A small, production-grade log indexing & search microservice'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

ext {
    luceneVersion = '10.3.0'
}

// Allow Chronicle Queue to access internal Java APIs
tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--enable-native-access=ALL-UNNAMED',
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.time=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.io=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED',
            '-Dchronicle.analytics.disable=true'
    ]
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation "org.apache.lucene:lucene-core:${luceneVersion}"
    implementation "org.apache.lucene:lucene-analysis-common:${luceneVersion}"
    implementation "org.apache.lucene:lucene-queryparser:${luceneVersion}"
    implementation "org.apache.lucene:lucene-highlighter:${luceneVersion}"
    implementation "org.apache.lucene:lucene-suggest:${luceneVersion}"

    implementation 'net.openhft:chronicle-queue:5.27ea11'
    // implementation 'org.postgresql:postgresql:42.7.7'

    compileOnly 'org.projectlombok:lombok:1.18.42'
    compileOnly 'org.jetbrains:annotations:26.0.2-1'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
